fix(FF-4103): cross doesn't extend search field anymore on smaller sizes

--- a/packages/search/src/components/SearchDecorator/styles.module.scss
+++ b/packages/search/src/components/SearchDecorator/styles.module.scss
@@ -5,10 +5,10 @@ $sizes: 's', 'm', 'l';
 
 .decorator {
   display: flex;
-  flex: 1 0 auto;
   align-items: center;
 
   box-sizing: border-box;
+  width: 100%;
 
   background-color: $sys-neutral-background1-level;
   border-color: transparent;
