--- a/packages/search/stories/styles.module.scss
+++ b/packages/search/stories/styles.module.scss
@@ -6,7 +6,7 @@
   overflow: auto;
 
   width: 584px;
-  min-width: 250px;
+  min-width: 150px;
   padding: 20px;
 
   
